# feverscreen

./: .gitignore  .goreleaser.yml  .travis.yml  Makefile  README.md  build-frontend.sh  go.mod  go.sum  package-lock.json  package.json
.github/workflows/: main.yml
_release/: feverscreen-apt-preferences  feverscreen-only-apt-config  feverscreen-updater.service  feverscreen.service  leptond.service  org.cacophony.feverscreen-updater.conf  postinstall.sh  tko-reinstall  tko-release-channel  tko-update
cmd/feverscreen/: config.go  cptv_test.go  cptvfilerecorder.go  cptvplaybacktester.go  main.go  snapshot.go  status-led.go
cmd/feverscreen-updater/: main.go
cmd/leptond/: config.go  main.go  service.go
cmd/signal-strength/: main.go
cmd/thermal-recorder/: snapshot.go
cptv_player/: Cargo.toml  index.d.ts  index.js  package.json
cptv_player/pkg/: index.js  index_bg.wasm  index_bg.wasm.d.ts  package.json
cptv_player/src/: decoder.rs  lib.rs
cptv_player/src/v2/: mod.rs  types.rs
frontend/: .gitignore  README.md  babel.config.js  jest.config.js  package-lock.json  package.json  temp-readings.csv  test  tko-test-data.csv  tsconfig.json  tsconfig.mocha.json  tsconfig.node.json  vue.config.js
frontend/cptv-player/: cptv_player.js  cptv_player_bg.d.ts  cptv_player_bg.wasm
frontend/cptv_player/: cptv_player.d.ts  package.json
frontend/curve-fit/: curve_fitting.d.ts  curve_fitting.js  curve_fitting_bg.d.ts  curve_fitting_bg.js  curve_fitting_bg.wasm  package.json
frontend/pkg/: cptv_player.js  package.json
frontend/processing/: package.json  tko_processing.d.ts  tko_processing.js  tko_processing_bg.js  tko_processing_bg.wasm  tko_processing_bg.wasm.d.ts
frontend/public/: cascade_stg17.xml  cptv_player_bg.wasm  index.html  smooth_bg.wasm  tko_processing_bg.wasm
frontend/smooth/: package.json  smooth.js  (+2 more)
headers/: headerinfo.go  headers.go
motion/: motionprocessor.go  motionprocessor_test.go
processing/: Cargo.toml  build.bat  build.sh
processing/src/: init.rs  lib.rs  screening_state.rs  shape_processing.rs  smoothing.rs  tests.rs  thermal_reference.rs  types.rs
recorder/: recorder.go  recorderconfig.go
throttle/: throttled_recorder.go  throttled_recorder_test.go
webserver/: audiobait.go  clienterror.go  config.go  helpers.go  location.go  tsconfig.json  ui.go  webserver.go
(+322 files in other folders)
